; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_tox.c_tox_options_default.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_tox.c_tox_options_default.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Tox_Options = type { i32, i32, i32 }

@TOX_PROXY_TYPE_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tox_options_default(%struct.Tox_Options* %0) #0 {
  %2 = alloca %struct.Tox_Options*, align 8
  store %struct.Tox_Options* %0, %struct.Tox_Options** %2, align 8
  %3 = load %struct.Tox_Options*, %struct.Tox_Options** %2, align 8
  %4 = icmp ne %struct.Tox_Options* %3, null
  br i1 %4, label %5, label %15

5:                                                ; preds = %1
  %6 = load %struct.Tox_Options*, %struct.Tox_Options** %2, align 8
  %7 = call i32 @memset(%struct.Tox_Options* %6, i32 0, i32 12)
  %8 = load %struct.Tox_Options*, %struct.Tox_Options** %2, align 8
  %9 = getelementptr inbounds %struct.Tox_Options, %struct.Tox_Options* %8, i32 0, i32 0
  store i32 1, i32* %9, align 4
  %10 = load %struct.Tox_Options*, %struct.Tox_Options** %2, align 8
  %11 = getelementptr inbounds %struct.Tox_Options, %struct.Tox_Options* %10, i32 0, i32 1
  store i32 1, i32* %11, align 4
  %12 = load i32, i32* @TOX_PROXY_TYPE_NONE, align 4
  %13 = load %struct.Tox_Options*, %struct.Tox_Options** %2, align 8
  %14 = getelementptr inbounds %struct.Tox_Options, %struct.Tox_Options* %13, i32 0, i32 2
  store i32 %12, i32* %14, align 4
  br label %15

15:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @memset(%struct.Tox_Options*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
